Styling fixes - reworked in order to have a good appearance on small-display devices

--- a/products-shop/src/components/product-details/Product comments/UserComments.module.css
+++ b/products-shop/src/components/product-details/Product comments/UserComments.module.css
@@ -1,4 +1,3 @@
-
 .commentWrapper {
     display: flex;
     margin: 7px;
@@ -22,8 +21,8 @@
     margin-bottom: 20px;
     margin-left: 20px;
     flex-direction: row;
-    justify-content:space-around;
-    align-items:center;
+    justify-content: space-around;
+    align-items: center;
     gap: 50px;
     background-color: whitesmoke;
     width: 95%;
@@ -31,7 +30,9 @@
     border-radius: 8px;
 }
 
-.avatar{
+
+
+.avatar {
 
     display: flex;
     align-items: center;
@@ -42,7 +43,8 @@
     width: 60px;
     font-size: 20px;
     font-weight: bolder;
-    line-height: 20px; /* Center the text vertically */
+    line-height: 20px;
+    /* Center the text vertically */
     text-align: center;
 
 }
@@ -56,12 +58,12 @@
     font-weight: bold;
     margin-top: 5px;
     margin-right: 10px;
-    text-wrap:wrap;
+    text-wrap: wrap;
     color: #3e8e41;
-    transform:scale(1.1)
+    transform: scale(1.1)
 }
 
-.userName:hover{
+.userName:hover {
 
 
     text-decoration: underline;
@@ -72,7 +74,7 @@
 
 .userDetails {
 
-    margin-top:8px;
+    margin-top: 8px;
     margin-bottom: 8px;
     margin-left: 8px;
     flex-direction: column;
@@ -81,7 +83,98 @@
 
 }
 
-.header{
+.header {
 
     margin: 8px;
+}
+
+
+
+@media all and (max-width:855) {
+
+    .commentWrapper {
+
+        width: 50%;
+        overflow-wrap: break-word; 
+        word-wrap: break-word;
+        white-space: normal;
+    }
+
+    .comment {
+
+       
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        white-space: normal;
+        width:25%;
+    }
+
+    .header {
+
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        white-space: normal;
+    }
+}
+
+@media all and (max-width:726px) {
+
+    .commentWrapper {
+
+        overflow-wrap: break-word; 
+        word-wrap: break-word;
+        white-space: normal;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width:100%
+    }
+
+    .comment {
+
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        white-space: normal;
+        width:50%;
+        display: flex;
+        align-items: center;
+        justify-content: left;
+    }
+
+    .header {
+
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        white-space: normal;
+
+    }
+
+    .userDetails{
+
+        display: flex;
+        flex-direction: column;
+        width:10%;
+        align-items: center;
+        justify-content: center;
+    }
+
+}
+
+@media all and (max-width:300px) {
+
+    .commentWrapper {
+
+        overflow:unset
+    }
+
+    .comment {
+        overflow:unset
+    }
+
+    .header {
+
+        overflow:unset
+    }
+
 }
